--- a/package.json
+++ b/package.json
@@ -9,9 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "@emotion/cache": "11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "5.15.15",
+    "@mui/lab": "5.0.0-alpha.170",
+    "@mui/material": "^5.16.7",
+    "@mui/styled-engine-sc": "^6.1.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tabler/icons-react": "2.30.0",
+    "next": "15.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "styled-components": "^6.1.13"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
