--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tabler/icons-react": "2.30.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "next": "15.0.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-redux": "^9.1.2"
   },
   "peerDependencies": {
