--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "@mui/x-charts": "^7.22.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tabler/icons-react": "2.30.0",
     "axios": "^1.7.7",
