--- a/package.json
+++ b/package.json
@@ -13,19 +13,15 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "@mui/x-charts": "^7.22.0",
-    "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.3.0",
     "@tabler/icons-react": "2.30.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.11.10",
     "next": "15.0.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
-    "react-google-autocomplete": "^2.7.3",
-    "react-redux": "^9.1.2",
-    "react-sparklines": "^1.7.0"
+    "react-redux": "^9.1.2"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
