--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-charts": "^7.22.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tabler/icons-react": "2.30.0",
+    "@vercel/analytics": "^1.3.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
