--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "15.0.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2"
   },
   "peerDependencies": {
